# leetcode

./: .gitignore  README.md
array/: 11_container_most_water.c  122_best_sell_stock2.c  12_int2roman.c  134_gas_station.c  1438_longest_sub_arr.c  151_rev_words_in_string.c  15_3sum.c  167_2sum2.c  169_majority.c  16_3sum_closest.c  1769_min_op_move_ball.c  1828_nf_pt_in_circle.c  187_rotate_array.c  2125_nf_laser_beam.c  238_product_exp_self.c  2391_min_time_collect_garbage.c  2545_sort_students_scores.c  2610_convert_arry22d.c  264_ugly_number.c  26_rm_duplicated_from_array.c  274_h_index.c  287_find_dup_num.c  31_next_permutation.c  380_insert_del_getraddom.c  3_longest_substring.c  45_jump_game2.c  54_spiral_matrix.c  55_jump_game.c  6_zigzag_conv.c  80_remove_dup_array2.c  CMakeLists.txt
array/easy/: 121_best_time_sell_stock.c  125_valid_palindrome.c  1313_dec_run_len_econde.c  1365_nf_smaller_than_curr.c  1389_target_arr_in_order.c  13_roman2int.c  1431_kids_with_maxnum_caniies.c  1470_shuffle_the_arr.c  1480_running_sum_of_arr.c  14_longest_prefix_str.c  1512_nf_good_pari.c  1528_shuffle_string.c  1773_count_item_match_rules.c  1920_build_array_permutation.c  1929_concatenation_of_arr.c  1_two_sum.c  2011_nf_op_string.c  2114_max_nfwords_in_sentences.c  2231_largest_num_after_digit_swap.c  2335_min_time_to_fill_cups.c  2357_make_array_zero.c  2500_delete_greatest_val_eachrow.c  2574_left_right_sum_diff.c  27_rm_elm.c  2824_cnt_pair_sum_less_target.c  2856_sum_val_idx_ksetsbits.c  28_mystrstr.c  2942_find_words_containing_char.c  2974_min_num_game.c  3264_final_array_after_k_multi.c  58_len_last_words.c  88_merge_sorted_array.c  CMakeLists.txt
bit-man/: 1009_comp_int.c  1342_nszero.c  136_single_num.c  137_single_num2.c  1486_xoroparr.c  1684_nfcons_str.c  1720_decode_xor_arr.c  1763_longest_nice_sub.c  1863_sum_xor.c  187_rep_dna_seq.c  191_nf1bits.c  201_bitwise_and_num_range.c  2032_two_out_of_three.c  2206_div_arr_equal.c  2220_mbitflip_num.c  260_single_num3.c  268_miss_num.c  2917_k_or_of_array.c  29_divide_2int.c  318_max_product_of_two_strlen.c  338_count_bit.c  371_sum_of_2int.c  389_find_diff.c  393_utf8_valid.c  397_int_replacement.c  421_max_xor_val_in_array.c  461_hamming_dis.c  476_nf_comp.c  693_bin_alt_bits.c  78_subsets.c  868_binary_gap.c  89_gray_code.c  90_subset2.c  CMakeLists.txt  count_bit.c  decode_xor_arr.c  div_arr_equal.c  hamming_dis.c  mbitflip_num.c  nf_even_old_bits.c  (+6 more)
concurrency/: 1114_print_in_order.c  1114_print_in_order_cond.c  1115_print_foobar_alt.c  1116_print_zero_even_odd.c  1117_h2o.c  1195_fizz_buzz.c  CMakeLists.txt
dp/: 1025_divisorgame.c  1043_partition_arr_max_sum.c  292_nim_game.c  300_longest_increasing_subsequence.c  392_is_subsequence.c  53_maximum_subarray.c  55_jump_game.c  CMakeLists.txt
linklist/: 1290_convert_bin_in_linklist.c  141_cycle_llist.c  1472_browser_history.c  160_intersection_node.c  1699_merge_2linklist.c  19_rm_nth_from_end.c  206_rev_linklist.c  2130_max_twin_sum.c  21_merge_sort_list.c  2236_spiral_matrix.c  234_plaindrome_llist.c  2487_rm_node.c  24_swap_nodes_parirs.c  2_add_2nums.c  61_roate_list.c  705_hash_set_linklist.c  706_hashmap.c  82_rm_duplicate_list.c  83_rm_dplist.c  86_partition_list.c  876_mid_linklist.c  92_rev_linklist2.c  CMakeLists.txt
priority-queue/: 1046_last_stone_weight.c  1337_kth_weakness_row.c  2099_subseq_lenk_max_sum.c  215_kth_largest_elm.c  2558_take_gifts_from_richest_pile.c  546_relative_ranks.c  703_kth_largest_elm.c  CMakeLists.txt
queue/: 1352_product_last_k_nums.c  1700_counts_unable_eat_students.c  2073_time_buy_ticket.c  225_stack_queue.c  387_first_unique_str.c  622_cqueue.c  641_circular_dqueue.c  649_dota2_senate.c  918_max_sum_csubarr.c  950_reveal_card_inc_order.c  CMakeLists.txt  arr-queue.c  circular_queue.c  josephus.c  list_queue.c  lqueue.c  priority_queue.c  work_queue.c  workq.c
stack/: 1381_stack_inc.c  143_reorder_list.c  1441_build_arr_stack_op.c  1475_final_price.c  150_reverse_polish_notion.c  1544_string_great.c  155_min_stack.c  227_basic_cal.c  232_queue_stack.c  2375_small_num_from_di_string.c  2390_rm_starts_from_string.c  2696_min_string_len.c  682_baseball_game.c  682_baseballgame.c  71_simple_path.c  844_backspace_string_compare.c  CMakeLists.txt
tree/: 589_n_array_tree_preorder.c  590_n_array_tree_postorder.c  897_inc_order_bt.c  CMakeLists.txt
