cmake_minimum_required(VERSION 3.0)
set(Project_name lecode-array)
set (TARGET_NAME1 11_container_most_water)
set (TARGET_NAME2 3_longest_substring)
set (TARGET_NAME3 26_rm_duplicated_from_array)
set (TARGET_NAME4 167_2sum2)
set (TARGET_NAME5 2610_convert_arry22d)
set (TARGET_NAME6 1828_nf_pt_in_circle)
set (TARGET_NAME7 1769_min_op_move_ball)
set (TARGET_NAME8 2125_nf_laser_beam)
set (TARGET_NAME9 2391_min_time_collect_garbage)
set (TARGET_NAME10 2545_sort_students_scores)
set (TARGET_NAME11 54_spiral_matrix)
set (TARGET_NAME12 15_3sum)
set (TARGET_NAME13 16_3sum_closest)
set (TARGET_NAME14 31_next_permutation)
set (TARGET_NAME15 1438_longest_sub_arr)
set (TARGET_NAME16 264_ugly_number)
set (TARGET_NAME17 287_find_dup_num)
set (TARGET_NAME18 55_jump_game)
set (TARGET_NAME19 45_jump_game2)
set (TARGET_NAME20 80_remove_dup_array2)
set (TARGET_NAME21 169_majority)
set (TARGET_NAME22 187_rotate_array)
set (TARGET_NAME23 122_best_sell_stock2)
set (TARGET_NAME24 274_h_index)
set (TARGET_NAME25 380_insert_del_getraddom)
set (TARGET_NAME26 238_product_exp_self)
set (TARGET_NAME27 134_gas_station)
set (TARGET_NAME28 12_int2roman)
set (TARGET_NAME29 151_rev_words_in_string)
set (TARGET_NAME30 6_zigzag_conv)

set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
set (PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
project(${Project_name})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
add_executable(${TARGET_NAME1} 11_container_most_water.c)
add_executable(${TARGET_NAME2} 3_longest_substring.c)
add_executable(${TARGET_NAME3} 26_rm_duplicated_from_array.c)
add_executable(${TARGET_NAME4} 167_2sum2.c)
add_executable(${TARGET_NAME5} 2610_convert_arry22d.c)
add_executable(${TARGET_NAME6} 1828_nf_pt_in_circle.c)
add_executable(${TARGET_NAME7} 1769_min_op_move_ball.c)
add_executable(${TARGET_NAME8} 2125_nf_laser_beam.c)
add_executable(${TARGET_NAME9} 2391_min_time_collect_garbage.c)
add_executable(${TARGET_NAME10} 2545_sort_students_scores.c)
add_executable(${TARGET_NAME11} 54_spiral_matrix.c)
add_executable(${TARGET_NAME12} 15_3sum.c)
add_executable(${TARGET_NAME13} 16_3sum_closest.c)
add_executable(${TARGET_NAME14} 31_next_permutation.c)
add_executable(${TARGET_NAME15} 1438_longest_sub_arr.c)
add_executable(${TARGET_NAME16} 264_ugly_number.c)
add_executable(${TARGET_NAME17} 287_find_dup_num.c)
add_executable(${TARGET_NAME18} 55_jump_game.c)
add_executable(${TARGET_NAME19} 45_jump_game2.c)
add_executable(${TARGET_NAME20} 80_remove_dup_array2.c)
add_executable(${TARGET_NAME21} 169_majority.c)
add_executable(${TARGET_NAME22} 187_rotate_array.c)
add_executable(${TARGET_NAME23} 122_best_sell_stock2.c)
add_executable(${TARGET_NAME24} 274_h_index.c)
add_executable(${TARGET_NAME25} 380_insert_del_getraddom.c)
add_executable(${TARGET_NAME26} 238_product_exp_self.c)
add_executable(${TARGET_NAME27} 134_gas_station.c)
add_executable(${TARGET_NAME28} 12_int2roman.c)
add_executable(${TARGET_NAME29} 151_rev_words_in_string.c)
add_executable(${TARGET_NAME30} 6_zigzag_conv.c)