cmake_minimum_required(VERSION 3.0)
set(Project_name lecode-bit)
set (TARGET_NAME1 decode_xor_arr)
set (TARGET_NAME2 nszero)
set (TARGET_NAME3 xoroparr)
set (TARGET_NAME4 mbitflip_num)
set (TARGET_NAME5 nfcons_str)
set (TARGET_NAME6 sum_xor)
set (TARGET_NAME7 count_bit)
set (TARGET_NAME8 hamming_dis)
set (TARGET_NAME9 div_arr_equal)
set (TARGET_NAME10 sort_nf_bits)
set (TARGET_NAME11 single_num)
set (TARGET_NAME12 nf_even_old_bits)
set (TARGET_NAME13 pr_num_bits)
set (TARGET_NAME14 nf_comp)
set (TARGET_NAME15 191_nf1bits)
set (TARGET_NAME16 268_miss_num)
set (TARGET_NAME17 868_binary_gap)
set (TARGET_NAME18 693_bin_alt_bits)
set (TARGET_NAME19 1763_longest_nice_sub)
set (TARGET_NAME20 1009_comp_int)
set (TARGET_NAME21 389_find_diff)
set (TARGET_NAME22 190_revbits)
#set (TARGET_NAME3 insert)
#set (TARGET_NAME4 cirlinklist)
#set (TARGET_NAME5 doublelinklist)
#set (TARGET_NAME6 rm_dup_linklist)
#set (TARGET_NAME7 rm_lastK)
#set (TARGET_NAME8 linklist25)
#set (TARGET_NAME9 linklist24)
#set (TARGET_NAME10 recursiveLinklist)
#set (TARGET_NAME11 reverseddl)
#set (TARGET_NAME12 revsinglelinklist)
#set (TARGET_NAME13 sep_odd_evn_sll)

#set (TARGET_NAME3 thread3)
#set (TARGET_NAME2 test1)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
set (PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
project(${Project_name})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
add_executable(${TARGET_NAME1} decode_xor_arr.c)
add_executable(${TARGET_NAME2} nszero.c)
add_executable(${TARGET_NAME3} xoroparr.c)
add_executable(${TARGET_NAME4} mbitflip_num.c)
add_executable(${TARGET_NAME5} nfcons_str.c)
add_executable(${TARGET_NAME6} sum_xor.c)
add_executable(${TARGET_NAME7} count_bit.c)
add_executable(${TARGET_NAME8} hamming_dis.c)
add_executable(${TARGET_NAME9} div_arr_equal.c)
add_executable(${TARGET_NAME10} sort_nf_bits.c)
add_executable(${TARGET_NAME11} single_num.c)
add_executable(${TARGET_NAME12} nf_even_old_bits.c)
add_executable(${TARGET_NAME13} pr_num_bits.c)
add_executable(${TARGET_NAME14} nf_comp.c)
add_executable(${TARGET_NAME15} 191_nf1bits.c)
add_executable(${TARGET_NAME16} 268_miss_num.c)
add_executable(${TARGET_NAME17} 868_binary_gap.c)
add_executable(${TARGET_NAME18} 693_bin_alt_bits.c)
add_executable(${TARGET_NAME19} 1763_longest_nice_sub.c)
add_executable(${TARGET_NAME20} 1009_comp_int.c)
add_executable(${TARGET_NAME21} 389_find_diff.c)
add_executable(${TARGET_NAME22} 190_revbits.c)