cmake_minimum_required(VERSION 3.0)
set(Project_name lecode-bit)
set (TARGET_NAME1 1720_decode_xor_arr)
set (TARGET_NAME2 1342_nszero)
set (TARGET_NAME3 1486_xoroparr)
set (TARGET_NAME4 2220_mbitflip_num)
set (TARGET_NAME5 1684_nfcons_str)
set (TARGET_NAME6 1863_sum_xor)
set (TARGET_NAME7 338_count_bit)
set (TARGET_NAME8 461_hamming_dis)
set (TARGET_NAME9 2206_div_arr_equal)
set (TARGET_NAME10 1356_sort_nf_bits)
set (TARGET_NAME11 136_single_num)
set (TARGET_NAME12 2595_nf_even_old_bits)
set (TARGET_NAME13 762_pr_num_bits)
set (TARGET_NAME14 476_nf_comp)
set (TARGET_NAME15 191_nf1bits)
set (TARGET_NAME16 268_miss_num)
set (TARGET_NAME17 868_binary_gap)
set (TARGET_NAME18 693_bin_alt_bits)
set (TARGET_NAME19 1763_longest_nice_sub)
set (TARGET_NAME20 1009_comp_int)
set (TARGET_NAME21 389_find_diff)
#set (TARGET_NAME22 190_revbits)
set (TARGET_NAME23 2032_two_out_of_three)
set (TARGET_NAME24 2917_k_or_of_array)
set (TARGET_NAME25 29_divide_2int)
set (TARGET_NAME26 78_subsets)
set (TARGET_NAME27 89_gray_code)
set (TARGET_NAME28 90_subset2)
set (TARGET_NAME29 137_single_num2)
set (TARGET_NAME30 187_rep_dna_seq)
set (TARGET_NAME31 201_bitwise_and_num_range)
set (TARGET_NAME32 260_single_num3)
set (TARGET_NAME33 318_max_product_of_two_strlen)
set (TARGET_NAME34 371_sum_of_2int)
set (TARGET_NAME35 393_utf8_valid)
set (TARGET_NAME36 397_int_replacement)
set (TARGET_NAME37 421_max_xor_val_in_array)
#set (TARGET_NAME3 insert)
#set (TARGET_NAME4 cirlinklist)
#set (TARGET_NAME5 doublelinklist)
#set (TARGET_NAME6 rm_dup_linklist)
#set (TARGET_NAME7 rm_lastK)
#set (TARGET_NAME8 linklist25)
#set (TARGET_NAME9 linklist24)
#set (TARGET_NAME10 recursiveLinklist)
#set (TARGET_NAME11 reverseddl)
#set (TARGET_NAME12 revsinglelinklist)
#set (TARGET_NAME13 sep_odd_evn_sll)

#set (TARGET_NAME3 thread3)
#set (TARGET_NAME2 test1)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
set (PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
project(${Project_name})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
add_executable(${TARGET_NAME1} 1720_decode_xor_arr.c)
add_executable(${TARGET_NAME2} 1342_nszero.c)
add_executable(${TARGET_NAME3} 1486_xoroparr.c)
add_executable(${TARGET_NAME4} 2220_mbitflip_num.c)
add_executable(${TARGET_NAME5} 1684_nfcons_str.c)
add_executable(${TARGET_NAME6} 1863_sum_xor.c)
add_executable(${TARGET_NAME7} 338_count_bit.c)
add_executable(${TARGET_NAME8} 461_hamming_dis.c)
add_executable(${TARGET_NAME9} 2206_div_arr_equal.c)
add_executable(${TARGET_NAME10} 1356_sort_nf_bits.c)
add_executable(${TARGET_NAME11} 136_single_num.c)
add_executable(${TARGET_NAME12} 2595_nf_even_old_bits.c)
add_executable(${TARGET_NAME13} 762_pr_num_bits.c)
add_executable(${TARGET_NAME14} 476_nf_comp.c)
add_executable(${TARGET_NAME15} 191_nf1bits.c)
add_executable(${TARGET_NAME16} 268_miss_num.c)
add_executable(${TARGET_NAME17} 868_binary_gap.c)
add_executable(${TARGET_NAME18} 693_bin_alt_bits.c)
add_executable(${TARGET_NAME19} 1763_longest_nice_sub.c)
add_executable(${TARGET_NAME20} 1009_comp_int.c)
add_executable(${TARGET_NAME21} 389_find_diff.c)
#add_executable(${TARGET_NAME22} 190_revbits.c)
add_executable(${TARGET_NAME23} 2032_two_out_of_three.c)
add_executable(${TARGET_NAME24} 2917_k_or_of_array.c)
add_executable(${TARGET_NAME25} 29_divide_2int.c)
add_executable(${TARGET_NAME26} 78_subsets.c)
add_executable(${TARGET_NAME27} 89_gray_code.c)
add_executable(${TARGET_NAME28} 90_subset2.c)
add_executable(${TARGET_NAME29} 137_single_num2.c)
add_executable(${TARGET_NAME30} 187_rep_dna_seq.c)
add_executable(${TARGET_NAME31} 201_bitwise_and_num_range.c)
add_executable(${TARGET_NAME32} 260_single_num3.c)
add_executable(${TARGET_NAME33} 318_max_product_of_two_strlen.c)
add_executable(${TARGET_NAME34} 371_sum_of_2int.c)
add_executable(${TARGET_NAME35} 393_utf8_valid.c)
add_executable(${TARGET_NAME36} 397_int_replacement.c)
add_executable(${TARGET_NAME37} 421_max_xor_val_in_array.c)
