cmake_minimum_required(VERSION 3.0)
set(Project_name priority-queue)
set (TARGET_NAME1 1046_last_stone_weight)
set (TARGET_NAME2 546_relative_ranks)
set (TARGET_NAME3 703_kth_largest_elm)
set (TARGET_NAME4 1337_kth_weakness_row)
set (TARGET_NAME5 2099_subseq_lenk_max_sum)
set (TARGET_NAME6 2558_take_gifts_from_richest_pile)
set (TARGET_NAME7 215_kth_largest_elm)

#set (TARGET_NAME3 thread3)
#set (TARGET_NAME2 test1)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
set (PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
project(${Project_name})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
add_executable(${TARGET_NAME1} 1046_last_stone_weight.c)
add_executable(${TARGET_NAME2} 546_relative_ranks.c)
add_executable(${TARGET_NAME3} 703_kth_largest_elm.c)
add_executable(${TARGET_NAME4} 1337_kth_weakness_row.c)
add_executable(${TARGET_NAME5} 2099_subseq_lenk_max_sum.c)
add_executable(${TARGET_NAME6} 2558_take_gifts_from_richest_pile.c)
target_link_libraries(${TARGET_NAME6}  m)

add_executable(${TARGET_NAME7} 215_kth_largest_elm.c)