cmake_minimum_required(VERSION 3.10)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
set(projectname "queuue")
set (CMAKE_C_STANDARD)
set(EXECUTABLE_OUTPUT_PATH "../bin")
project(projectname)
add_executable(arr-queue arr-queue.c)
add_executable(list_queue list_queue.c)
add_executable(circular_queue circular_queue.c)
add_executable(priority_queue priority_queue.c)
add_executable(josephus josephus.c)
add_executable(1700_counts_unable_eat_students 1700_counts_unable_eat_students.c)
add_executable(225_stack_queue 225_stack_queue.c)
add_executable(2073_time_buy_ticket 2073_time_buy_ticket.c)
add_executable(387_first_unique_str 387_first_unique_str.c)
add_executable(lqueue lqueue.c)
add_executable(work_queue work_queue.c)
add_executable(workq workq.c)
add_executable(622_cqueue 622_cqueue.c)
add_executable(641_circular_dqueue 641_circular_dqueue.c)
add_executable(649_dota2_senate 649_dota2_senate.c)
add_executable(918_max_sum_csubarr 918_max_sum_csubarr.c)
add_executable(950_reveal_card_inc_order 950_reveal_card_inc_order.c)
add_executable(1352_product_last_k_nums 1352_product_last_k_nums.c)