cmake_minimum_required(VERSION 3.0)
set(Project_name lecode-linklist)
set (TARGET_NAME1 682_baseball_game)
set (TARGET_NAME2 71_simple_path)
set (TARGET_NAME3 143_reorder_list)
set (TARGET_NAME4 150_reverse_polish_notion)
set (TARGET_NAME5 155_min_stack)
set (TARGET_NAME6 227_basic_cal)

set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
set (PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
project(${Project_name})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
add_executable(${TARGET_NAME1} 682_baseball_game.c)
add_executable(${TARGET_NAME2} 71_simple_path.c)
add_executable(${TARGET_NAME3} 143_reorder_list.c)
add_executable(${TARGET_NAME4} 150_reverse_polish_notion.c)
add_executable(${TARGET_NAME5} 155_min_stack.c)
add_executable(${TARGET_NAME6} 227_basic_cal.c)
add_executable(1475_final_price 1475_final_price.c)
add_executable(2696_min_string_len 2696_min_string_len.c)
add_executable(232_queue_stack 232_queue_stack.c)
add_executable(844_backspace_string_compare 844_backspace_string_compare.c)
add_executable(1441_build_arr_stack_op 1441_build_arr_stack_op.c)
add_executable(1381_stack_inc 1381_stack_inc.c)
add_executable(2375_small_num_from_di_string 2375_small_num_from_di_string.c)
add_executable(2390_rm_starts_from_string 2390_rm_starts_from_string.c)
add_executable(1544_string_great 1544_string_great.c)
