cmake_minimum_required(VERSION 3.0)
set(Project_name lecode-array-easy)
set (TARGET_NAME1 1920_build_array_permutation)
set (TARGET_NAME2 1929_concatenation_of_arr)
set (TARGET_NAME3 1512_nf_good_pari)
set (TARGET_NAME4 2011_nf_op_string)
set (TARGET_NAME5 1470_shuffle_the_arr)
set (TARGET_NAME6 1431_kids_with_maxnum_caniies)
set (TARGET_NAME7 2824_cnt_pair_sum_less_target)
set (TARGET_NAME8 1480_running_sum_of_arr)
set (TARGET_NAME9 1365_nf_smaller_than_curr)
set (TARGET_NAME10 2114_max_nfwords_in_sentences)
set (TARGET_NAME11 2856_sum_val_idx_ksetsbits)
set (TARGET_NAME12 2574_left_right_sum_diff)
set (TARGET_NAME13 1389_target_arr_in_order)
set (TARGET_NAME14 1313_dec_run_len_econde)
set (TARGET_NAME15 1528_shuffle_string)
set (TARGET_NAME16 1773_count_item_match_rules)
set (TARGET_NAME17 2500_delete_greatest_val_eachrow)


set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
set (PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
project(${Project_name})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
add_executable(${TARGET_NAME1} 1920_build_array_permutation.c)
add_executable(${TARGET_NAME2} 1929_concatenation_of_arr.c)
add_executable(${TARGET_NAME3} 1512_nf_good_pari.c)
add_executable(${TARGET_NAME4} 2011_nf_op_string.c)
add_executable(${TARGET_NAME5} 1470_shuffle_the_arr.c)
add_executable(${TARGET_NAME6} 1431_kids_with_maxnum_caniies.c)
add_executable(${TARGET_NAME7} 2824_cnt_pair_sum_less_target.c)
add_executable(${TARGET_NAME8} 1480_running_sum_of_arr.c)
add_executable(${TARGET_NAME9} 1365_nf_smaller_than_curr.c)
add_executable(${TARGET_NAME10} 2114_max_nfwords_in_sentences.c)
add_executable(${TARGET_NAME11} 2856_sum_val_idx_ksetsbits.c)
add_executable(${TARGET_NAME12} 2574_left_right_sum_diff.c)
add_executable(${TARGET_NAME13} 1389_target_arr_in_order.c)
add_executable(${TARGET_NAME14} 1313_dec_run_len_econde.c)
add_executable(${TARGET_NAME15} 1528_shuffle_string.c)
add_executable(${TARGET_NAME16} 1773_count_item_match_rules.c)
add_executable(${TARGET_NAME17} 2500_delete_greatest_val_eachrow.c)